2005-02-22  Sebastian Rahtz  <rahtz@spqr-ibm>
	* version 4.3.4
	* html/teihtml-front.xsl: rewrite titlePage after suggestions from
	Syd Bauman
	* html/teihtml-xref.xsl: if <ptr> has a type attribute, pass on to
	to HTML <a>
	* odds/teiodds.xsl: if attDef is mode add inside an elementSpec
	mode add, process it. This is how Roma writes ODDs.

2005-02-20  Sebastian Rahtz  <rahtz@spqr-ibm>

	* html/teihtml-notes.xsl: entirely redo handling of notes

	* ChangeLog, VERSION, html/teihtml-layout.xsl, html/teihtml-misc.xsl, html/teihtml-struct.xsl, html/teihtml-xref.xsl:
	process tei:title more intelligently depending on context

	* html/teihtml-odds.xsl:
	show type of attribute, whether mandatory or not

2005-02-17  Sebastian Rahtz  <rahtz@spqr-ibm>

	* latex/teilatex.xsl:
	dont default to using lmtt for typewriter, it may not be available

2005-02-17  Sebastian Rahtz  <rahtz@spqr-ibm>

	* html/teihtml-odds.xsl: print information about whether attribute
	is mandatory or not
	* html/teihtml-misc.xsl: handle tei:title in running text
	* latex/teilatex.xsl: don't default to using lmtt, people don't
	have it

2005-02-08  Sebastian Rahtz  <rahtz@spqr-ibm>
	* version 4.3.3
	* common/teicommon.xsl: don't emit messages.
	* odds/odd2html: fix odd processing

2005-02-06  Sebastian Rahtz  <rahtz@spqr-ibm>
	* version 4.3.2
	* odds/teiodds.xsl: when getting class attributes from TEISERVER,
	explicitly process classSpec. Under some circumstances, spurious
	data comes back (I think tei.dictionaries is conflated with
	TEI.dictionaries).
	* odd/teixml-odds.xsl: identify output divs with original ID to
	prevent duplicates. Put #before targets of internal xrefs

2005-01-31  Sebastian Rahtz  <rahtz@spqr-ibm>

	* widespread changes to many stylesheets, rearranging the way
	page layout is done. a master parameter "pageLayout" determines
	all the options.

2005-01-27  Sebastian Rahtz  <rahtz@spqr-ibm>

	* version 4.2.9
	* html/teihtml-misc.xsl: stop address being a block quote