@@ -62,6 +62,49 @@ body{
    position : absolute;
 }
 
+#col1{
+   width: 15%;
+   background: #ffffff;
+   margin: 0;
+   margin-top: 10px;
+   color: #000066;
+   padding: 5px;
+   position : absolute;
+   float: left;
+   border-style: solid;
+   border-width: 1;
+   border-color: black;
+}
+
+#col2{
+   background: #ffffff;
+   color: #333333;
+   border-style: solid;
+   border-width: 1;
+   border-color: black;
+   margin: 0;
+   margin-top: 10px;
+   padding: 5px ;
+   left: 17%;
+   width: 65%;
+   position : absolute;
+}
+
+#col3{
+   width: 15%;
+   left: 84%;
+   color: #000066;
+   background: #ffffff;
+   border-style: solid;
+   border-width: 1;
+   border-color: black;
+   margin: 0;
+   margin-top: 10px;
+   padding: 5px;
+   position : absolute;
+   float: right;
+}
+
 .bannerright {
    position : absolute;
    right : 5px;
